[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fobox-orm"
version = "0.0.1"
description = "ORM for Fobox"
requires-python = ">=3.14"
authors = [{ name = "Mark Radin", email = "openmiot@gmail.com" }]

[project.optional-dependencies]
postgres = ["asyncpg"]
full = ["fobox-orm[postgres]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["orm*"]
